$Id: CHANGES,v 1.305 2009/09/07 08:51:04 stelian Exp $

Changes between versions 0.4b42 and 0.4b43 (released ?????????????)
===================================================================

1.	Fix a bug in dump making impossible to handle large toc files
	(> 2 GB). Thanks to X DUGi <xdugi@users.sourceforge.net> for
	reporting the bug (Sourceforge bug #2820629)

2.	Fix 'restore -x' in multi-volume mode, which caused files being
	spanned on the first and second volumes to be incorrectly extracted.
	Thanks to Adam Tkac <atkac@redhat.com> for reporting the bug.
	(there may be several bug reports about this issue, including
	Sourceforge bug #2117008, RedHat bugs #232415 and #444958).

3.	Remove -lselinux -lsepol from the standard libraries list,
	they shouldn't be needed if selinux is not enabled in dump
	(this also fixes a build failure when selinux libraries are
	not installed).

Changes between versions 0.4b41 and 0.4b42 (released June 18, 2009)
===================================================================

1.	Fix printout of the 'Connection to' message in dump/restore.
	Thanks to Dale Wiles <dwiles@users.sourceforge.net> for the
	bug report and its fix.

2.	Fix dump -w/-W output for filesystems having the last backup
	level equal to 0. Thanks to Pascal Bouchareine
	<kalou@users.sourceforge.net> for reporting the bug.

3.	Enable restore to handle restoring onto a different SELinux
	policy from the dump. Thanks to Tony Nelson 
	<tony_nelson@users.sourceforge.net> for the patch.
	(see http://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=189845
	for details)

4.	Fix EA set failures when restoring immutable files. Thanks
	to Andrew Kroeger for the patch.

5.	Fix "mode file too large" errors when restoring huge backups.
	Thanks to Kenneth Porter <shiva@sewingwitch.com> for the bug
	report.

6.	Add the ability to link against libtinfo library if present,
	instead of libtermcap or libncurses libraries. Thanks to
	Adam Tkac <atkac@redhat.com> for the patch.
